--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "dependencies": {
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
+    },
+    "devDependencies": {
+        "@types/node": "^16.7.1"
     }
 }
